Refactor DESIGN-14: Added State and Grid test cases